Fix name of wpan (IEEE 802.15.4) fields to be more consistent, add in generic wpan.length field
This issue was migrated from bug 5952 in our old bug tracker.
Original bug information:
Reporter: Colin O'Flynn
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: Other
Version: Git
Attachments:
ieee802154_fieldnames.patch: Patch against SVN 37387
ieee802154_fieldnames.patch: Patch against SVN 37390
ethtest.pcap: Example using Ethernet capture hardware
zeptest.pcap: Example using ZEP capture hardware