From Colin O'Flynn: Fix name of wpan (IEEE 802.15.4) fields to be more consistent, add in generic wpan.length field.

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=5952

svn path=/trunk/; revision=40838